[tool.poetry]
name = "the-end-of-the-world"
version = "0.1.0"
description = "FastAPI application to demonstrate the end of the world."
authors = ["elbeto87"]
readme = "[README.md](http://readme.md/)"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
httpx = "^0.28"
pydantic-settings = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
httpx = "^0.28"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120